--- a/markup/includes/add-property-form.html
+++ b/markup/includes/add-property-form.html
@@ -192,7 +192,8 @@
                 </div>
             </div>
         </section>
-        <section class="feature-block" id="feature-block">
+       <section class="feature-block" id="feature-block">
+            <a class="feature-blockOpener">Click here to see extra feature</a>
             <strong class="form-heading"><span>extra features</span></strong>
             <div class="holder">
                 <div class="features-section-holder">
@@ -201,227 +202,227 @@
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<select>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-								</select>
-							</div>
+                                <select>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                </select>
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="radio">
-							</div>
+                                <input type="radio">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="checkbox">
-							</div>
+                                <input type="checkbox">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
                     </ul>
                 </div>
-				<div class="features-section-holder">
+                <div class="features-section-holder">
                     <span class="tag">Main Features</span>
                     <ul class="feature-list">
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<select>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-								</select>
-							</div>
+                                <select>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                </select>
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="radio">
-							</div>
+                                <input type="radio">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="checkbox">
-							</div>
+                                <input type="checkbox">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
                     </ul>
                 </div>
-				<div class="features-section-holder">
+                <div class="features-section-holder">
                     <span class="tag">Main Features</span>
                     <ul class="feature-list">
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<select>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-								</select>
-							</div>
+                                <select>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                </select>
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="radio">
-							</div>
+                                <input type="radio">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="checkbox">
-							</div>
+                                <input type="checkbox">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
                     </ul>
                 </div>
-				<div class="features-section-holder">
+                <div class="features-section-holder">
                     <span class="tag">Main Features</span>
                     <ul class="feature-list">
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<select>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-								</select>
-							</div>
+                                <select>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                </select>
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="radio">
-							</div>
+                                <input type="radio">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="checkbox">
-							</div>
+                                <input type="checkbox">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
                     </ul>
                 </div>
-				<div class="features-section-holder">
+                <div class="features-section-holder">
                     <span class="tag">Main Features</span>
                     <ul class="feature-list">
                         <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<select>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-									<option>1</option>
-								</select>
-							</div>
+                                <select>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                    <option>1</option>
+                                </select>
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="radio">
-							</div>
+                                <input type="radio">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="checkbox">
-							</div>
+                                <input type="checkbox">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
-						<li>
+                        <li>
                             <label>Bedrooms:</label>
                             <div class="input-holder">
-								<input type="number">
-							</div>
+                                <input type="number">
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -489,26 +490,6 @@
                         </div>
                     </div>
                     <input type="text" ng-model="form.data.files.sixFile.title" class="picture-name disableInput" placeholder="Title">
-                </li>
-                <li>
-                    <div class="file-uploader">
-                        <input type="file" ng-model="form.data.files.sevenFile.file" onchange="previewAddPropertyImg(this , '.img-thumb7')" class="upload-img">
-                        <div class="image-holder">
-                            <img src="#" class="img-thumb7" alt="image Description">
-                            <span class="propertyDocumentCloseBtn"><span class="icon-trash"></span></span>
-                        </div>
-                    </div>
-                    <input type="text" ng-model="form.data.files.sevenFile.title" class="picture-name disableInput" placeholder="Title">
-                </li>
-                <li>
-                    <div class="file-uploader">
-                        <input type="file" ng-model="form.data.files.eightFile.file" onchange="previewAddPropertyImg(this , '.img-thumb8')" class="upload-img">
-                        <div class="image-holder">
-                            <img src="#" class="img-thumb8" alt="image Description">
-                            <span class="propertyDocumentCloseBtn"><span class="icon-trash"></span></span>
-                        </div>
-                    </div>
-                    <input type="text" ng-model="form.data.files.eightFile.title" class="picture-name disableInput" placeholder="Title">
                 </li>
             </ul>
         </section>
