--- a/markup/scss/property-listing.scss
+++ b/markup/scss/property-listing.scss
@@ -316,9 +316,10 @@ $media-expressions: (
 	}
 	.propeties-table{
 		width: 100%;
-		border-collapse: collapse;
 		@include font(15,18);
 		margin: 0 auto;
+		@extend %listreset;
+		overflow: hidden;
 		
 		.sideBar-active &{
 			margin: 0;
@@ -335,15 +336,18 @@ $media-expressions: (
 			width: 894px;
 		}
 		
-		tr{
+		li{
 			width: 100%;
+			@include align-reset(top,15,18);
+			border-bottom: 1px solid rgba($mix-grays, 0.4);
 			
-			th{
+			.t-head{
 				text-align: left;
-				@include font(15,18);
 				padding: 8px;
 				background: rgba($defualt-blue, 0.5);
 				color: $white;
+				width: 14.28%;
+				font-weight: 600;
 				
 				@include media('<desktop'){
 					padding: 5px;
@@ -361,11 +365,11 @@ $media-expressions: (
 				&:last-child{ border-radius: 0 4px 4px 0 ;}
 			}
 			
-			td{
+			.t-data{
 				text-align:left;
-				border-bottom: 1px solid rgba($mix-grays, 0.4);
 				padding: 10px 8px;
 				overflow: hidden;
+				width: 14.28%;
 				
 				@include media('<desktop'){
 					padding: 5px;
@@ -378,6 +382,7 @@ $media-expressions: (
 				@include font(18,21);
 				margin: 0 5px;
 				color: $black;
+				cursor: pointer;
 				
 				&.details{
 					color: $mix-blue;
@@ -393,12 +398,6 @@ $media-expressions: (
 				&.delete{
 					color: $red;
 					&:hover{ color: darken($red, 15%);}
-				}
-			}
-			
-			&:hover{
-				td{
-					background: rgba($mix-grays, 0.08);
 				}
 			}
 		}
