--- a/markup/css/add-property-form.css
+++ b/markup/css/add-property-form.css
@@ -294,7 +294,7 @@
 }
 
 .addPropertyFormContainer .section-listing li.activeAddPropertyNavLink a [class^="icon-"], .addPropertyFormContainer .section-listing li.activeAddPropertyNavLink a [class*="icon-"] {
-  color: #58a36f;
+  color: #1ab394;
 }
 
 .addPropertyFormContainer .section-listing li:hover:before {
@@ -310,7 +310,7 @@
 }
 
 .addPropertyFormContainer .section-listing li:hover a [class^="icon-"], .addPropertyFormContainer .section-listing li:hover a [class*="icon-"] {
-  color: #58a36f;
+  color: #1ab394;
 }
 
 .addPropertyFormContainer .section-listing li a {
@@ -858,12 +858,12 @@
 
 .addPropertyFormContainer .form-heading {
   display: block;
-  color: #606060;
+  color: #fff;
   text-transform: capitalize;
   font-size: 16px;
-  line-height: 19px;
-  border-bottom: 1px solid #adadad;
-  padding: 0 0 5px;
+  line-height: 20px;
+  font-weight: 600;
+  border-bottom: 1px solid #133783;
   margin: 30px 0 0;
 }
 
@@ -878,15 +878,17 @@
   display: inline-block;
   vertical-align: top;
   position: relative;
+  background: #133783;
+  padding: 6px 10px;
 }
 
 .addPropertyFormContainer .form-heading span:after {
   position: absolute;
-  bottom: -6px;
-  left: 0;
-  right: 0;
-  background: #ef9521;
-  height: 2px;
+  top: -32px;
+  right: -32px;
+  border: 32px solid transparent;
+  border-bottom: 32px solid #133783;
+  border-left: 0;
   content: '';
 }
 
@@ -915,11 +917,33 @@
 .addPropertyFormContainer .feature-block .holder {
   overflow: hidden;
   padding: 10px 0 0;
+  font-size: 0;
+  line-height: 0;
+  letter-spacing: -4px;
+}
+
+.addPropertyFormContainer .feature-block .holder > * {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0;
+}
+
+.addPropertyFormContainer .feature-block .holder .features-section-holder {
+  width: 50%;
+}
+
+@media (max-width: 1023px) {
+  .addPropertyFormContainer .feature-block .holder .features-section-holder {
+    width: 100%;
+  }
 }
 
 .addPropertyFormContainer .feature-block .holder .tag {
   display: block;
   padding: 10px;
+  text-align: center;
 }
 
 .addPropertyFormContainer .tag {
@@ -934,8 +958,6 @@
   font-size: 0;
   line-height: 0;
   letter-spacing: -4px;
-  margin: 0 auto 20px;
-  max-width: 1220px;
   position: relative;
   padding: 0 0 20px;
 }
@@ -960,19 +982,12 @@
 
 .addPropertyFormContainer .feature-list li {
   padding: 0 10px 15px;
-  width: 25%;
+  width: 50%;
 }
 
 @media (max-width: 1023px) {
   .addPropertyFormContainer .feature-list li {
-    width: 50%;
     padding: 0 5px 10px;
-  }
-}
-
-@media (max-width: 767px) {
-  .addPropertyFormContainer .feature-list li {
-    width: 50%;
   }
 }
 
