--- a/markup/css/property-listing.css
+++ b/markup/css/property-listing.css
@@ -412,8 +412,6 @@
 
 .property-listing-holder .propeties-table {
   width: 100%;
-  font-size: 15px;
-  line-height: 18px;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -424,7 +422,7 @@
 
 @media (max-width: 1199px) {
   .property-listing-holder .propeties-table {
-    width: 1024px;
+    width: 1200px;
   }
 }
 
@@ -457,13 +455,61 @@
   letter-spacing: 0;
 }
 
+@media (max-width: 1554px) {
+  .property-listing-holder .propeties-table li {
+    font-size: 0;
+    line-height: 0;
+    letter-spacing: -4px;
+  }
+  .property-listing-holder .propeties-table li > * {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 13px;
+    line-height: 16px;
+    letter-spacing: 0;
+  }
+}
+
+.property-listing-holder .propeties-table li.active {
+  border-left: 1px solid rgba(96, 96, 96, 0.4);
+  border-right: 1px solid rgba(96, 96, 96, 0.4);
+  background: rgba(0, 0, 0, 0.03);
+}
+
+.property-listing-holder .propeties-table li:first-child {
+  border: 0;
+  background: rgba(19, 55, 131, 0.5);
+  border-radius: 4px;
+}
+
 .property-listing-holder .propeties-table li .t-head {
   text-align: left;
   padding: 8px;
-  background: rgba(19, 55, 131, 0.5);
   color: #fff;
   width: 14.28%;
   font-weight: 600;
+}
+
+.property-listing-holder .propeties-table li .t-head.by-location, .property-listing-holder .propeties-table li .t-head.by-type {
+  width: 23.72%;
+}
+
+.property-listing-holder .propeties-table li .t-head.by-id {
+  width: 8%;
+}
+
+.property-listing-holder .propeties-table li .t-head.by-price {
+  width: 8%;
+}
+
+.property-listing-holder .propeties-table li .t-head.by-view {
+  width: 8%;
+}
+
+@media (max-width: 1554px) {
+  .property-listing-holder .propeties-table li .t-head {
+    width: 14.28% !important;
+  }
 }
 
 @media (max-width: 1023px) {
@@ -476,18 +522,27 @@
   display: inline-block;
   vertical-align: top;
   cursor: pointer;
+  position: relative;
+}
+
+.property-listing-holder .propeties-table li .t-head span:after {
+  position: absolute;
+  top: 8px;
+  right: -15px;
+  border: 5px solid transparent;
+  content: '';
+}
+
+.property-listing-holder .propeties-table li .t-head span.descending:after {
+  border-top: 5px solid #fff;
 }
 
 .property-listing-holder .propeties-table li .t-head span:hover {
   color: #edf1f4;
 }
 
-.property-listing-holder .propeties-table li .t-head:first-child {
-  border-radius: 4px 0 0 4px;
-}
-
-.property-listing-holder .propeties-table li .t-head:last-child {
-  border-radius: 0 4px 4px 0;
+.property-listing-holder .propeties-table li .t-head span:hover:after {
+  opacity: 0.8;
 }
 
 .property-listing-holder .propeties-table li .t-data {
@@ -497,10 +552,36 @@
   width: 14.28%;
 }
 
+.property-listing-holder .propeties-table li .t-data.by-location, .property-listing-holder .propeties-table li .t-data.by-type {
+  width: 23.72%;
+}
+
+.property-listing-holder .propeties-table li .t-data.by-id {
+  width: 8%;
+}
+
+.property-listing-holder .propeties-table li .t-data.by-price {
+  width: 8%;
+}
+
+.property-listing-holder .propeties-table li .t-data.by-view {
+  width: 8%;
+}
+
 @media (max-width: 1023px) {
   .property-listing-holder .propeties-table li .t-data {
     padding: 5px;
   }
+}
+
+@media (max-width: 1554px) {
+  .property-listing-holder .propeties-table li .t-data {
+    width: 14.28% !important;
+  }
+}
+
+.property-listing-holder .propeties-table li p {
+  margin: 0;
 }
 
 .property-listing-holder .propeties-table li a {
@@ -539,4 +620,67 @@
 
 .property-listing-holder .propeties-table li a.delete:hover {
   color: #bc1e1e;
+}
+
+.property-listing-holder .propeties-table li .slide {
+  display: block;
+  overflow: hidden;
+  padding: 0 0 10px;
+}
+
+.property-listing-holder .propeties-table li .slide .two-cols {
+  font-size: 0;
+  line-height: 0;
+  letter-spacing: -4px;
+  padding: 20px 20px 0;
+  color: #606060;
+}
+
+.property-listing-holder .propeties-table li .slide .two-cols > * {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0;
+}
+
+.property-listing-holder .propeties-table li .slide .two-cols .col {
+  width: 50%;
+}
+
+.property-listing-holder .propeties-table li .slide .two-cols h1 {
+  font-size: 22px;
+  line-height: 25px;
+  font-style: italic;
+  margin: 0 0 15px;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.property-listing-holder .propeties-table li .slide .two-cols p {
+  margin: 0 0 10px;
+}
+
+.property-listing-holder .propeties-table li .slide .btn-more {
+  color: #fff;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  border-radius: 4px;
+  width: 200px;
+  margin: 0 auto;
+  background: #58a36f;
+  text-align: center;
+  display: block;
+  border-bottom: 4px solid #3d714d;
+  padding: 5px 10px;
+  transition: border 0.4s ease, background 0.4s ease;
+  -webkit-transition: border 0.4s ease, background 0.4s ease;
+  -moz-transition: border 0.4s ease, background 0.4s ease;
+  -ms-transition: border 0.4s ease, background 0.4s ease;
+}
+
+.property-listing-holder .propeties-table li .slide .btn-more:hover {
+  background: #ef9521;
+  border-bottom: 4px solid #b66c0d;
 }
