--- a/markup/scss/add-property-form.scss
+++ b/markup/scss/add-property-form.scss
@@ -240,7 +240,7 @@ $media-expressions: (
 					&:after{
 						right: 0;
 					}
-					[class^="icon-"], [class*="icon-"] { color: $green;}
+					[class^="icon-"], [class*="icon-"] { color: $sharp-musterd;}
 				}	
 			}
 			&:hover{
@@ -252,7 +252,7 @@ $media-expressions: (
 					&:after{
 						right: 0;
 					}
-				[class^="icon-"], [class*="icon-"] { color: $green;}				
+				[class^="icon-"], [class*="icon-"] { color: $sharp-musterd;}				
 				}
 			}
 			
@@ -691,11 +691,11 @@ $media-expressions: (
 	}
 	.form-heading{
 		display: block;
-		color: $mix-grays;
+		color: $white;
 		text-transform: capitalize;
-		@include font(16,19);
-		border-bottom: 1px solid #adadad;
-		padding: 0 0 5px;
+		@include font(16,20);
+		font-weight: 600;
+		border-bottom: 1px solid $defualt-blue;
 		margin: 30px 0 0;
 		
 		@include media('<desktop'){
@@ -705,16 +705,19 @@ $media-expressions: (
 		span{
 			@include align(top);
 			position: relative;
+			background: $defualt-blue;
+			padding: 6px 10px;
 			
-			&:after {
-				position: absolute;
-				bottom: -6px;
-				left: 0;
-				right: 0;
-				background: $orange;
-				height: 2px;
+			&:after{
+				position: absolute;	
+				top: -32px;
+				right: -32px;
+				border: 32px solid transparent;
+				border-bottom: 32px solid  $defualt-blue;
+				border-left: 0;
 				content: '';
 			}
+			
 		}
 	}
 	.feature-block{
@@ -744,10 +747,18 @@ $media-expressions: (
 		.holder{
 			overflow: hidden;
 			padding: 10px 0 0;
+			@include align-reset(top,12,15);
+			
+			.features-section-holder{
+				width: 50%;
+				
+				@include media('<desktop'){ width: 100%;}
+			}
 			
 			.tag{
 				display: block;
 				padding:10px;
+				text-align: center;
 			}
 		}
 	}
@@ -760,8 +771,6 @@ $media-expressions: (
 	.feature-list{
 		@extend %listreset;
 		@include align-reset(top,13,16);
-		margin: 0 auto 20px;
-		max-width: 1220px;
 		position: relative;
 		padding: 0 0 20px;
 		
@@ -777,15 +786,10 @@ $media-expressions: (
 		
 		li{
 			padding: 0 10px 15px;
-			width: 25%;
+			width: 50%;
 			
 			@include media('<desktop'){
-				width: 50%;
 				padding: 0 5px 10px;
-			}
-			
-			@include media('<tablet'){
-				width: 50%;
 			}
 			
 			label{
